
- #10859: Add `Format.pp_print_iter` and `Format.pp_print_array`.
  (Léo Andrès and Daniel Bünzli, review by David Allsopp and Hugo Heuzard)

- #10789: Add `Stack.drop`
  (Léo Andrès, review by Gabriel Scherer)

* #10899: Change Stdlib.nan from signaling NaN to quiet NaN.
  (Greta Yorsh, review by Xavier Leroy, Guillaume Melquiond and
  Gabriel Scherer)

- #11026, #11667, #11858: Rename the type of the accumulator
  of fold functions to 'acc:
  fold_left : ('acc -> 'a -> 'acc) -> 'acc -> 'a list -> 'acc
  fold_right : ('a -> 'acc -> 'acc) -> 'a list -> 'acc -> 'acc
  fold_left_map : ('acc -> 'a -> 'acc * 'b) -> 'acc -> 'a list -> 'acc * 'b list
  ...
  (Valentin Gatien-Baron and Francois Berenger,
  review by Gabriel Scherer and Nicolás Ojeda Bär)

- #11246: Add "hash" and "seeded_hash" functions to Bool, Int, Char, Float,
  Int32, Int64, and Nativeint.
  (Nicolás Ojeda Bär, review by Xavier Leroy and Gabriel Scherer)

- #11354: Hashtbl.find_all is now tail-recursive.
  (Fermín Reig, review by Gabriel Scherer)

- #11500: Make Hashtbl.mem non-allocating.
  (Simmo Saan, review by Nicolás Ojeda Bär)

- #11362: Rewrite List.map, List.mapi and List.map2 using TRMC, making them
  faster as well as tail-recursive.
  (Nicolás Ojeda Bär, review by Gabriel Scherer)

- #11412: Add Sys.is_regular_file
  (Xavier Leroy, review by Anil Madhavapeddy, Nicolás Ojeda Bär, David Allsopp)

- #11402: Rewrite List.init, List.filter, List.filteri, List.filter_map and
  List.of_seq using TRMC instead of an accumulator, making them faster and
  halving memory usage while remaining tail-recursive.
  (Nicolás Ojeda Bär, review by Xavier Leroy and Gabriel Scherer)

- #11476: Add examples in documentation of Hashtbl, Queue, Atomic, Format
  (Simon Cruanes, review by Yotam Barnoy, Gabriel Scherer, Daniel Bünzli,
   Ulugbek Abdullaev, and Nicolás Ojeda Bär)

- #11488: Add Mutex.protect for resource-safe critical sections protected by
  a mutex.